--- a/index.html
+++ b/index.html
@@ -62,12 +62,12 @@
                 <label for="cverde">Cheiro Verde:<input type="checkbox" class="checkbox" name="refogar12" id="cverde"
                         value="cverde"></label>
                 <p class="paragrafo">Finalize de 0 a 3 opção</p>
-                <label for="">Ovo de Codorna:<input type="checkbox" name="" id="finalizar"> </label>
-                <label for="">Queijo Parmezão:<input type="checkbox" name="" id="finalizar"></label>
-                <label for="">Mussarela:<input type="checkbox" name="" id="finalizar"> </label>
-                <label for="">Oregano: <input type="checkbox" name="" id="finalizar"></label>
-                <label for="">Catupiry:<input type="checkbox" name="" id="finalizar"></label>
-                <label for="">Cheddar: <input type="checkbox" name="" id="finalizar"></label>
+                <label for="codorna">Ovo de Codorna:<input type="checkbox" name="" id="codorna"> </label>
+                <label for="qparmezao">Queijo Parmezão:<input type="checkbox" name="" id="qparmezao"></label>
+                <label for="mussarela">Mussarela:<input type="checkbox" name="" id="mussarela"> </label>
+                <label for="oregano">Oregano: <input type="checkbox" name="" id="oregano"></label>
+                <label for="catupiry">Catupiry:<input type="checkbox" name="" id="catupiry"></label>
+                <label for="cheddar">Cheddar: <input type="checkbox" name="" id="cheddar"></label>
                 <input class="btn" type="submit" value="Enviar" onclick="enviar()">
                 <input class="btn" type="reset" value="Limpar ">
             </form>
