--- a/index.html
+++ b/index.html
@@ -23,51 +23,61 @@
                     title="Digite o telefone no formato (XX) XXXXX-XXXX" placeholder="(XX) XXXXX-XXXX"
                     pattern="\(\d{2}\) \d{5}-\d{4}">
                 <p class="paragrafo">Somente uma opção</p>
-                <label for="recheio">Frango:<input type="radio" name="recheio" id="recheio" value="frango"></label>
+             <div class="checkbox-container">
+                <label for="recheio">Frango:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="radio" name="recheio" id="recheio" value="frango"></label>
                 <label for="recheio">Bolonhesa:<input type="radio" name="recheio" id="recheio" value="bolonhesa"></label>
-                <label for="recheio">Calabresa:<input type="radio" name="recheio" id="recheio" value="calabresa"></label>
-                <label for="recheio">Camarão:<input type="radio" name="recheio" id="recheio" value="camarao"></label>
+                <label for="recheio">Calabresa:&nbsp<input type="radio" name="recheio" id="recheio" value="calabresa"></label>
+                <label for="recheio">Camarão:&nbsp&nbsp&nbsp&nbsp<input type="radio" name="recheio" id="recheio" value="camarao"></label>
+             </div>
                 <p class="paragrafo">Escola seus molhos</p>
-                <label for="molho">Branco:<input type="radio" name="molho" id="molho" value="branco"></label>
+             <div class="checkbox-container">
+                <label for="molho">Branco:&nbsp&nbsp&nbsp&nbsp&nbsp<input type="radio" name="molho" id="molho" value="branco"></label>
                 <label for="">Vermelho:<input type="radio" name="molho" id="molho" value="vermelho"></label>
-                <label for="">Rose:<input type="radio" name="molho" id="molho" value="rose"></label>
+                <label for="">Rose:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="radio" name="molho" id="molho" value="rose"></label>
+             </div>
                 <p class="paragrafo">Escolha seu macarrão</p>
-                <label for="">Penne: <input type="radio" name="massa" id="massa" value="penne"></label>
-                <label for="">Talharim:<input type="radio" name="massa" id="massa" value="talharim"></label>
-                <label for=""> Parafuso:<input type="radio" name="massa" id="massa" value="parafuso"> </label>
-                <label for="">Espaquete:<input type="radio" name="massa" id="massa" value="espaguete"> </label>
+             <div class="checkbox-container">
+                <label for="">Penne:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="radio" name="massa" id="massa" value="penne"></label>
+                <label for="">Talharim:&nbsp&nbsp&nbsp&nbsp&nbsp<input type="radio" name="massa" id="massa" value="talharim"></label>
+                <label for=""> Parafuso:&nbsp&nbsp&nbsp<input type="radio" name="massa" id="massa" value="parafuso"> </label>
+                <label for="">Espaquete:&nbsp<input type="radio" name="massa" id="massa" value="espaguete"> </label>
+             </div>
                 <p class="paragrafo">Refogue 0 a 6 Opções </p>
-                <label for="alho">Alho:<input type="checkbox" class="checkbox" name="refogar1" id="alho" value="alho">
-                </label>
-                <label for="cebola">Cebola:<input type="checkbox" class="checkbox" name="refogar2" id="cebola"
-                        value="cebola"> </label>
-                <label for="tomate">Tomate:<input type="checkbox" class="checkbox" name="refogar3" id="tomate"
-                        value="tomate"> </label>
-                <label for="pimentao">Pimentão:<input type="checkbox" class="checkbox" name="refogar4" id="pimentao"
-                        value="pimentao"></label>
-                <label for="azeitona">Azeitona:<input type="checkbox" class="checkbox" name="refogar5" id="azeitona"
-                        value="azeitona"></label>
-                <label for="mverde">Milho verde:<input type="checkbox" class="checkbox" name="refogar6" id="mverde"
-                        value="mverde"> </label>
-                <label for="ervilha">Ervilha:<input type="checkbox" class="checkbox" name="refogar7" id="ervilha"
-                        value="ervilha"></label>
-                <label for="upassa">Uva passa:<input type="checkbox" class="checkbox" name="refogar8" id="upassa"
-                        value="upassa"> </label>
-                <label for="presunto">Presunto:<input type="checkbox" class="checkbox" name="refogar9" id="presunto"
-                        value="presunto"> </label>
-                <label for="qcoalho">Queijo Coalho:<input type="checkbox" class="checkbox" name="refogar10" id="qcoalho"
-                        value="qcoalho"></label>
-                <label for="bacon">Bacon:<input type="checkbox" class="checkbox" name="refogar" id="bacon"
-                        value="bacon"></label>
-                <label for="cverde">Cheiro Verde:<input type="checkbox" class="checkbox" name="refogar12" id="cverde"
-                        value="cverde"></label>
+                <div class="checkbox-container">
+                    <label for="alho">Alho:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" class="checkbox" name="refogar1" id="alho" value="alho">
+                    </label>
+                    <label for="cebola">Cebola:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" class="checkbox" name="refogar2" id="cebola"
+                            value="cebola"> </label>
+                    <label for="tomate">Tomate:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" class="checkbox" name="refogar3" id="tomate"
+                            value="tomate"> </label>
+                    <label for="pimentao">Pimentão:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" class="checkbox" name="refogar4" id="pimentao"
+                            value="pimentao"></label>
+                    <label for="azeitona">Azeitona:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" class="checkbox" name="refogar5" id="azeitona"
+                            value="azeitona"></label>
+                    <label for="mverde">Milho verde:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" class="checkbox" name="refogar6" id="mverde"
+                            value="mverde"> </label>
+                    <label for="ervilha">Ervilha:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" class="checkbox" name="refogar7" id="ervilha"
+                            value="ervilha"></label>
+                    <label for="upassa">Uva passa:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" class="checkbox" name="refogar8" id="upassa"
+                            value="upassa"> </label>
+                    <label for="presunto">Presunto:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" class="checkbox" name="refogar9" id="presunto"
+                            value="presunto"> </label>
+                    <label for="qcoalho">Queijo Coalho:<input type="checkbox" class="checkbox" name="refogar10" id="qcoalho"
+                            value="qcoalho"></label>
+                    <label for="bacon">Bacon:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" class="checkbox" name="refogar" id="bacon"
+                            value="bacon"></label>
+                    <label for="cverde">Cheiro Verde:&nbsp&nbsp<input type="checkbox" class="checkbox" name="refogar12" id="cverde"
+                            value="cverde"></label>
+                </div>
                 <p class="paragrafo">Finalize de 0 a 3 opção</p>
-                <label for="codorna">Ovo de Codorna:<input type="checkbox" name="" id="codorna"> </label>
-                <label for="qparmezao">Queijo Parmezão:<input type="checkbox" name="" id="qparmezao"></label>
-                <label for="mussarela">Mussarela:<input type="checkbox" name="" id="mussarela"> </label>
-                <label for="oregano">Oregano: <input type="checkbox" name="" id="oregano"></label>
-                <label for="catupiry">Catupiry:<input type="checkbox" name="" id="catupiry"></label>
-                <label for="cheddar">Cheddar: <input type="checkbox" name="" id="cheddar"></label>
+             <div class="checkbox-container ">
+                <label for="codorna">Ovo/codorna :<input type="checkbox" name="" id="codorna"> </label>
+                <label for="qparmezao">Parmezão:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" name="" id="qparmezao"></label>
+                <label for="mussarela">Mussarela:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" name="" id="mussarela"> </label>
+                <label for="oregano">Oregano:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" name="" id="oregano"></label> 
+                <label for="catupiry">Catupiry:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" name="" id="catupiry"></label>
+                <label for="cheddar"> Cheddar:&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp<input type="checkbox" name="" id="cheddar"> </label>
+             </div>
                 <input class="btn" type="submit" value="Enviar" onclick="enviar()">
                 <input class="btn" type="reset" value="Limpar ">
             </form>
